e2e/networking/ingress/00-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 90
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
status:
  readyReplicas: 1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
    - host: web.example.com
